@@ -1,3 +1,9 @@
+2008-05-09: Jason Long <jlong@messiah.edu>
+ * lib/Mail/DKIM/Signature.pm (identity): do quoted-printable encoding/
+   decoding for the i= tag (issue #1839015)
+ * t/corpus/good_qp_1.txt, good_qp_2.txt, good_qp_3.txt: three test files
+   for identities using quoted-printable encoding
+
 2008-04-14: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/Signature.pm: documentation for get_tag()
 
